Add `@fiberplane/hooks` (#164)
* Add initial implementation of `@fiberplane/hooks`

* Make use of `@fiberplane/hooks` in `fiberplane-charts`

* Doc changes

* Add `nx` config & fix linting issues

* Fix JSDoc comments

* Bump version for release

--- a/fiberplane-charts/package.json
+++ b/fiberplane-charts/package.json
@@ -29,6 +29,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@fiberplane/hooks": "workspace:^",
     "framer-motion": "^10.12.4",
     "react-window": "^1.8.9",
     "throttle-debounce": "^5.0.0"
