--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "packageManager": "yarn@3.5.0",
   "workspaces": [
     "fiberplane-charts",
+    "fiberplane-hooks",
     "fiberplane-prometheus-query",
     "fiberplane-ui"
   ],
