--- a/fiberplane-ui/package.json
+++ b/fiberplane-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fiberplane/ui",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "UI components for Fiberplane",
   "author": "Fiberplane <info@fiberplane.com>",
   "license": "MIT OR Apache-2.0",
@@ -30,7 +30,7 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-import-css": "^3.5.0",
     "rollup-plugin-swc3": "^0.11.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "6.1.8",
     "tslib": "^2.6.2",
     "typescript": "^5.4.2"
   },
