--- a/fiberplane-hooks/package.json
+++ b/fiberplane-hooks/package.json
@@ -24,6 +24,9 @@
     "rollup-plugin-swc3": "^0.11.0",
     "typescript": "^5.4.2"
   },
+  "peerDependencies": {
+    "react": "^18.2.0"
+  },
   "scripts": {
     "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "watch": "yarn build --watch",
