--- a/fiberplane-charts/package.json
+++ b/fiberplane-charts/package.json
@@ -57,7 +57,7 @@
     "rollup": "^4.13.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-swc3": "^0.11.0",
-    "styled-components": "6.1.8",
+    "styled-components": "^6.1.11",
     "typescript": "^5.4.2"
   },
   "scripts": {
